fix it README fail

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-h1. RepositoryManager
+RepositoryManager
+-----------------
 
-Web repository manager for "NuxLauncher":https://github.com/NuxosMinecraft/NuxLauncher
+Web repository manager for [NuxLauncher][1]
+
+[1]: https://github.com/NuxosMinecraft/NuxLauncher
